// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> Matches Snapshot 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 gwXiGr"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 hfmEXi count"
      >
        17
      </div>
    </div>
  </span>
</div>
`;

exports[`<CartCount/> Update via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 gwXiGr"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 hfmEXi count count-enter-done"
      >
        25
      </div>
    </div>
  </span>
</div>
`;
